# POS_Rucki_Pavlikova

./: CMakeLists.txt  Makefile  bunka.c  lokalny.txt  main.c  pole.c  pravdepodobnosti.c  simulacia.c
Client/: Aplikacia.cpp  Aplikacia.h  CMakeLists.txt  Makefile  PravdepodobnostiPolicok.h  Simulacia.cpp  Simulacia.h  ZistovacOdpovedi.cpp  ZistovacOdpovedi.h  lokalny.txt  main.cpp
Client/Logika/: PravdepodobnostiPolicok.cpp  PravdepodobnostiPolicok.h  Serializator.cpp  Serializator.h  ServerKomunikator.cpp  ServerKomunikator.h  Simulacia.cpp  Simulacia.h  ZistovacOdpovedi.cpp  ZistovacOdpovedi.h
Client/PosSockets/: my_socket.cpp  my_socket.h
Client/Utilities/: Farby.h  ServerKomunikator.cpp  ServerKomunikator.h  SpravcaSuborov.cpp  SpravcaSuborov.h  ZistovacOdpovedi.cpp  ZistovacOdpovedi.h
Server/: CMakeLists.txt  Makefile  bunka.c  main.c  pravdepodobnosti.c  simulacia.c  vietor.c
Server/Logika/: bunka.c  pole.c  simulacia.c  vietor.c
Server/PosSockets/: active_socket.c  char_buffer.h
Server/Utilities/: char_buffer_ll.c  generator_nahody.c  spravca.c
rucki@/Logika/: bunka.c  pole.c  vietor.c
rucki@/PosSockets/: char_buffer.c
rucki@/Resources/: saves_backup.txt
rucki@/Utilities/: spravca.c
rucki@frios2.fri.uniza.sk/home/rucki/os/semestralka/: main.c
rucki@frios2.fri.uniza.sk/home/rucki/os/semestralka/Logika/: simulacia.c
rucki@frios2.fri.uniza.sk/home/rucki/os/semestralka/Utilities/: saves.txt
